--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.1.10",
-    "vue-router": "^2.2.0"
-  },
-  "devDependencies": {
-    "assert": "^1.4.1",
+    "vue-router": "^2.2.0",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -36,7 +33,6 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "mongodb": "^2.2.24",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
@@ -52,7 +48,19 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "co": "^4.6.0",
+    "debug": "^2.2.0",
+    "koa-bodyparser": "^2.0.1",
+    "koa-json": "^1.1.1",
+    "koa-logger": "^1.3.0",
+    "koa-static": "^1.5.2",
+    "koa": "^1.2.5",
+    "koa-router": "^5.4.0"
+  },
+  "devDependencies": {
+    "mysql": "^2.13.0",
+    "sequelize": "^3.30.2"
   },
   "engines": {
     "node": ">= 4.0.0",
