--- a/sever/package.json
+++ b/sever/package.json
@@ -14,10 +14,11 @@
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
     "koa-static": "^1.5.2",
-    "koa-views": "^3.1.0"
-  },
-  "devDependencies": {
+    "koa-views": "^3.1.0",
     "koa": "^1.2.5",
     "koa-router": "^5.4.0"
+  },
+  "devDependencies": {
+    "mysql": "^2.13.0"
   }
 }
