--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "test": "npm run e2e"
   },
   "dependencies": {
-    "vue": "^2.1.10",
-    "vue-router": "^2.2.0",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -22,9 +20,11 @@
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
+    "co": "^4.6.0",
     "connect-history-api-fallback": "^1.3.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
+    "debug": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
@@ -33,6 +33,12 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "koa": "^1.2.5",
+    "koa-bodyparser": "^2.0.1",
+    "koa-json": "^1.1.1",
+    "koa-logger": "^1.3.0",
+    "koa-router": "^5.4.0",
+    "koa-static": "^1.5.2",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
@@ -40,23 +46,18 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
+    "vue": "^2.1.10",
     "vue-loader": "^10.3.0",
     "vue-resource": "^1.2.0",
+    "vue-router": "^2.2.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
+    "vue-utear": "^0.1.11",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1",
-    "co": "^4.6.0",
-    "debug": "^2.2.0",
-    "koa-bodyparser": "^2.0.1",
-    "koa-json": "^1.1.1",
-    "koa-logger": "^1.3.0",
-    "koa-static": "^1.5.2",
-    "koa": "^1.2.5",
-    "koa-router": "^5.4.0"
+    "webpack-merge": "^2.6.1"
   },
   "devDependencies": {
     "mysql": "^2.13.0",
