--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "npm run e2e"
   },
   "dependencies": {
+    "ansi-regex": "^2.1.1",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -18,12 +19,17 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "browserslist": "^1.7.4",
+    "caniuse-api": "^1.5.3",
+    "caniuse-db": "^1.0.30000624",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
     "co": "^4.6.0",
     "connect-history-api-fallback": "^1.3.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
+    "cssnano": "^3.10.0",
+    "de-indent": "^1.0.2",
     "debug": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
@@ -31,8 +37,10 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "he": "^1.1.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "js-beautify": "^1.6.9",
     "koa": "^1.2.5",
     "koa-bodyparser": "^2.0.1",
     "koa-json": "^1.1.1",
@@ -42,6 +50,7 @@
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
+    "postcss-merge-rules": "^2.1.2",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
