--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "he": "^1.1.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jquery": "^3.1.1",
     "js-beautify": "^1.6.9",
     "koa": "^1.2.5",
     "koa-bodyparser": "^2.0.1",
@@ -47,6 +48,8 @@
     "koa-logger": "^1.3.0",
     "koa-router": "^5.4.0",
     "koa-static": "^1.5.2",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
