--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "koa": "^1.2.5",
     "koa-bodyparser": "^2.0.1",
     "koa-json": "^1.1.1",
+    "koa-jwt": "^1.3.1",
     "koa-logger": "^1.3.0",
     "koa-router": "^5.4.0",
     "koa-static": "^1.5.2",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "md5": "^2.2.1",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
