--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "koa-static": "^1.5.2",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "marked": "^0.3.6",
     "md5": "^2.2.1",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
