--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "less-loader": "^2.2.3",
     "marked": "^0.3.6",
     "md5": "^2.2.1",
+    "moment": "^2.17.1",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
