--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
     "co": "^4.6.0",
+    "co-busboy": "^1.3.1",
     "connect-history-api-fallback": "^1.3.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
