--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vue-material": "^0.7.1",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0",
+    "vue-simplemde": "^0.3.8",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "vue-utear": "^0.2.7",
