--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "gitment": "^0.0.3",
     "he": "^1.1.1",
+    "highlight.js": "^9.11.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "js-beautify": "^1.6.9",
     "koa": "^1.2.5",
     "koa-bodyparser": "^2.0.1",
@@ -62,6 +64,7 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "superagent": "^3.5.2",
     "url-loader": "^0.5.7",
     "vue": "^2.1.10",
     "vue-loader": "^10.3.0",
