--- a/package.json
+++ b/package.json
@@ -1,92 +1,35 @@
 {
   "name": "vue-pro",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "'lixuan' <'kermitlx@outlook.com'>",
-  "private": true,
+  "description": "> A Vue.js project",
+  "main": "index.js",
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run e2e"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js,.vue src"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KermitLi/vue-pro.git"
+  },
+  "author": "lixuan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KermitLi/vue-pro/issues"
+  },
+  "homepage": "https://github.com/KermitLi/vue-pro#readme",
   "dependencies": {
-    "ansi-regex": "^2.1.1",
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "browserslist": "^1.7.4",
-    "caniuse-api": "^1.5.3",
-    "caniuse-db": "^1.0.30000624",
-    "chalk": "^1.1.3",
-    "chromedriver": "^2.27.2",
-    "co": "^4.6.0",
-    "co-busboy": "^1.3.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.26.1",
-    "cssnano": "^3.10.0",
-    "de-indent": "^1.0.2",
-    "debug": "^2.2.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.2",
-    "file-loader": "^0.10.0",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
-    "gitment": "^0.0.3",
-    "he": "^1.1.1",
-    "highlight.js": "^9.11.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "jquery": "^3.2.1",
-    "js-beautify": "^1.6.9",
-    "koa": "^1.2.5",
-    "koa-bodyparser": "^2.0.1",
-    "koa-json": "^1.1.1",
-    "koa-jwt": "^1.3.1",
-    "koa-logger": "^1.3.0",
-    "koa-router": "^5.4.0",
-    "koa-static": "^1.5.2",
-    "less": "^2.7.2",
-    "less-loader": "^2.2.3",
-    "marked": "^0.3.6",
-    "md5": "^2.2.1",
-    "moment": "^2.17.1",
-    "nightwatch": "^0.9.12",
-    "opn": "^4.0.2",
-    "ora": "^1.1.0",
-    "postcss-merge-rules": "^2.1.2",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "superagent": "^3.5.2",
-    "url-loader": "^0.5.7",
-    "vue": "^2.1.10",
-    "vue-loader": "^10.3.0",
-    "vue-material": "^0.7.1",
-    "vue-resource": "^1.2.0",
-    "vue-router": "^2.2.0",
-    "vue-simplemde": "^0.3.8",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.1.10",
-    "vue-utear": "^0.2.7",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "ribes": "0.x"
   },
   "devDependencies": {
-    "mysql": "^2.13.0",
-    "sequelize": "^3.30.2"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
