--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "homepage": "https://github.com/KermitLi/vue-pro#readme",
   "dependencies": {
     "co-busboy": "^1.3.1",
+    "koa-jwt": "^1.3.1",
     "md5": "^2.2.1",
     "moment": "^2.18.1",
+    "mysql2": "^1.3.5",
     "ribes": "0.1.6",
-    "ribes-orm": "2.0.0",
+    "ribes-orm": "^2.0.0",
+    "sequelize": "^4.2.1",
     "superagent": "^3.5.2"
   },
   "devDependencies": {
