--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "vue-material": "^0.7.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
+    "vue-simplemde": "^0.3.8",
     "vue-utear": "^0.2.20"
   },
   "devDependencies": {
