--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue-simplemde": "^0.3.8",
-    "vue-utear": "^0.2.20"
+    "vue-utear": "^0.2.20",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
