--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "highlight.js": "^9.12.0",
     "jquery": "^3.2.1",
     "marked": "^0.3.6",
